force-app/main/default/objects/Claim_Attachment__c.object
<CustomObject>
    <label>Claim Attachment</label>
    <nameField>
        <displayFormat>CLM-ATT-{000000}</displayFormat>
        <label>Claim Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>