force-app/main/default/objects/Claim_Attachment__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim Attachments</relationshipLabel>
    <relationshipName>Claim_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>